--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -3,7 +3,7 @@
 <div class="container py-5">
     <div class="row">
       <div class="col-md-6">
-        <form method="POST" action="/cadastro">
+        <form method="POST" action="/cadastro" enctype="multipart/form-data" >
           <h2>Cadastro</h2>
 
           <% if(typeof(errors) != "undefined") { %>
@@ -31,9 +31,16 @@
             />
           </div>  
           <div class="form-group">
-            <label for="nome">Senha</label>
+            <label for="senha">Senha</label>
             <input type="password" name="senha" id="senha" class="form-control" />
-          </div>        
+          </div> 
+          <div class="form-group">
+            <label for="foto">Foto</label>
+            <input type="file" name="avatar">
+          </div> 
+          
+
+          
           <button class="btn btn-primary">Cadastrar</button>
         </form>
       </div>
